<resources>
    <string name="app_name">SpeakPad</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="enter_your_login_info_to_get_into_your_account">Enter your Login info to get into your account</string>
    <string name="someone_gmail_com">someone@gmail.com</string>
    <string name="forget_your_password">Forget your <font fgcolor='#FFE566A1'>password?</font></string>
    <string name="create_new">Create new</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="enter_password">Enter Password</string>
    <string name="speakpad">SPEAKPAD</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_your_info_to_create_new_account">Enter your info to create new account</string>
    <string name="create_account">Create Account</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login">Already have an account?</string>
    <string name="add_notes">Add Notes</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="to_do_list">To do list</string>
    <string name="notes">Notes</string>
    <string name="is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s_standard_dummy_text_ever_since_the_1500s_when_an_unknown_printer_took_a_galley_of_type_and_scrambled_it_to_make_a_type_specimen_book_it_has_survived_not_only_five_centuries_but_also_the_leap_into_electronic_typesetting_remaining_essentially_unchanged_it_was_popularised_in_the_1960s_with_the_release_of_letraset_sheets_containing_lorem_ipsum_passages_and_more_recently_with_desktop_publishing_software_like_aldus_pagemaker_including_versions_of_lorem_ipsum">is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="history">History</string>
    <string name="task_name">Task Name</string>
    <string name="enter_task_name">Enter Task name</string>
    <string name="description">Description</string>
    <string name="enter_descripton">Enter Description</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
</resources>