<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/light_gray"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:padding="8dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <ImageView
                android:src="@drawable/ic_baseline_arrow_back_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:gravity="center"
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_reminder"
                android:textSize="28sp"
                android:textColor="@color/text"
                android:fontFamily="@font/courgette"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:padding="16dp">


            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/courgette"
                android:text="@string/task_name"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edTxtTaskName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/ed_bg"
                android:ems="10"
                android:hint="@string/enter_task_name"
                android:inputType="textPersonName"
                android:padding="16dp"
                android:fontFamily="@font/courgette"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:textSize="18sp"
                android:fontFamily="@font/courgette"
                android:text="@string/description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edTxtTaskName" />

            <EditText
                android:id="@+id/edTxtDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/ed_bg"
                android:ems="10"
                android:fontFamily="@font/courgette"
                android:hint="@string/enter_descripton"
                android:inputType="textPersonName"
                android:padding="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView12" />

            <ImageView
                android:id="@+id/btnDatePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:src="@drawable/btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edTxtDescription" />

            <TextView
                android:id="@+id/txtDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="@color/white"
                android:fontFamily="@font/courgette"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@+id/btnDatePicker"
                app:layout_constraintEnd_toEndOf="@+id/btnDatePicker"
                app:layout_constraintStart_toStartOf="@+id/btnDatePicker"
                app:layout_constraintTop_toTopOf="@+id/btnDatePicker" />

            <ImageView
                android:id="@+id/btnTimePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:src="@drawable/btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnDatePicker" />

            <TextView
                android:id="@+id/txtTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textColor="@color/white"
                android:fontFamily="@font/courgette"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@+id/btnTimePicker"
                app:layout_constraintEnd_toEndOf="@+id/btnTimePicker"
                app:layout_constraintStart_toStartOf="@+id/btnTimePicker"
                app:layout_constraintTop_toTopOf="@+id/btnTimePicker" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:src="@drawable/ic_baseline_save_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>