<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:padding="8dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <ImageView
                android:src="@drawable/menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:gravity="center"
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speakpad"
                android:textSize="28sp"
                android:textColor="@color/text"
                android:fontFamily="@font/courgette"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_height="match_parent"
         >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:padding="16dp"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_marginTop="100dp"
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/add_notes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/btnAddNotes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="64dp"
                android:src="@drawable/btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_notes"
                android:textColor="@color/text"
                android:textSize="20sp"
                android:fontFamily="@font/courgette"
                app:layout_constraintBottom_toBottomOf="@+id/btnAddNotes"
                app:layout_constraintEnd_toEndOf="@+id/btnAddNotes"
                app:layout_constraintStart_toStartOf="@+id/btnAddNotes"
                app:layout_constraintTop_toTopOf="@+id/btnAddNotes" />


            <ImageView
                android:id="@+id/btnAddReminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnAddNotes" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_reminder"
                android:textColor="@color/text"
                android:textSize="20sp"
                android:fontFamily="@font/courgette"
                app:layout_constraintBottom_toBottomOf="@+id/btnAddReminder"
                app:layout_constraintEnd_toEndOf="@+id/btnAddReminder"
                app:layout_constraintStart_toStartOf="@+id/btnAddReminder"
                app:layout_constraintTop_toTopOf="@+id/btnAddReminder" />


            <ImageView
                android:id="@+id/btnTodoList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnAddReminder" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_do_list"
                android:textColor="@color/text"
                android:textSize="20sp"
                android:fontFamily="@font/courgette"
                app:layout_constraintBottom_toBottomOf="@+id/btnTodoList"
                app:layout_constraintEnd_toEndOf="@+id/btnTodoList"
                app:layout_constraintStart_toStartOf="@+id/btnTodoList"
                app:layout_constraintTop_toTopOf="@+id/btnTodoList" />

            <ImageView
                android:id="@+id/btnHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnTodoList" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history"
                android:textColor="@color/text"
                android:textSize="20sp"
                android:fontFamily="@font/courgette"
                app:layout_constraintBottom_toBottomOf="@+id/btnHistory"
                app:layout_constraintEnd_toEndOf="@+id/btnHistory"
                app:layout_constraintStart_toStartOf="@+id/btnHistory"
                app:layout_constraintTop_toTopOf="@+id/btnHistory" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>